# mtgoxapi

./: .ghci  APIRequest.hs  AuthCommand.hs  AuthCommandReplyParsing.hs  ChannelJoiner.hs  CommandHook.hs  CurlWrapper.hs  DataStream.hs  DepthMonitor.hs  DepthStore.hs  DepthStoreAdapter.hs  DepthStoreTest.hs  Example.hs  HookUtils.hs  MtGoxCredentials.hs  MtGoxHttpAPI.hs  MtGoxStream.hs  NOTES  README.md  StreamCommand.hs  StreamMonitor.hs  StreamParsing.hs  TestSuite.hs  TickerMonitor.hs  TickerMonitorApp.hs  mtgoxapi.cabal
Network/: MtGoxAPI.hs
Network/MtGoxAPI/: Credentials.hs  CurlWrapper.hs  DepthStore.hs  Handles.hs  HttpAPI.hs  StreamAuthCommands.hs  StreamCommands.hs  StreamConnection.hs  TickerMonitor.hs  Types.hs  WalletNotifier.hs
Network/MtGoxAPI/DepthStore/: Adapter.hs  Monitor.hs  StressTest.hs  Tests.hs
