name:                mtgoxapi
version:             0.4
synopsis:            Library to communicate with Mt.Gox
license:             MIT
license-file:        LICENSE
author:              Jan Vornberger <jan@uos.de>
maintainer:          Jan Vornberger <jan@uos.de>
category:            Network
build-type:          Simple
cabal-version:       >= 1.8

library
  build-depends: base == 4.*
                 , vector == 0.9.*
                 , text == 0.11.*
                 , unordered-containers == 0.2.*
                 , bytestring == 0.9.*
                 , attoparsec == 0.10.*
                 , network == 2.3.*
                 , hashable == 1.1.*
                 , aeson == 0.6.*
                 , time == 1.4.*
                 , watchdog >= 0.2.2 && < 0.3
                 , base64-bytestring == 0.1.*
                 , base16-bytestring == 0.1.*
                 , SHA == 1.5.*
                 , ixset == 1.0.*
                 , curl == 1.3.*
                 , HTTP == 4000.2.*
                 , transformers == 0.3.*
                 , errors == 1.3.*
  exposed-modules: Network.MtGoxAPI
                   , Network.MtGoxAPI.Credentials
                   , Network.MtGoxAPI.CurlWrapper
                   , Network.MtGoxAPI.DepthStore
                   , Network.MtGoxAPI.DepthStore.Adapter
                   , Network.MtGoxAPI.Handles
                   , Network.MtGoxAPI.HttpAPI
                   , Network.MtGoxAPI.StreamAuthCommands
                   , Network.MtGoxAPI.StreamCommands
                   , Network.MtGoxAPI.StreamConnection
                   , Network.MtGoxAPI.TickerMonitor
                   , Network.MtGoxAPI.Types
                   , Network.MtGoxAPI.WalletNotifier
  ghc-options: -O -Wall

test-suite testsuite
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  build-depends: base == 4.*
                 , vector == 0.9.*
                 , text == 0.11.*
                 , unordered-containers == 0.2.*
                 , bytestring == 0.9.*
                 , attoparsec == 0.10.*
                 , network == 2.3.*
                 , hashable == 1.1.*
                 , aeson == 0.6.*
                 , time == 1.4.*
                 , watchdog >= 0.2.2 && < 0.3
                 , base64-bytestring == 0.1.*
                 , base16-bytestring == 0.1.*
                 , SHA == 1.5.*
                 , ixset == 1.0.*
                 , curl == 1.3.*
                 , HTTP == 4000.2.*
                 , transformers == 0.3.*
                 , errors == 1.3.*
                 , QuickCheck == 2.4.*
                 , HUnit == 1.2.*
                 , test-framework == 0.6.*
                 , test-framework-quickcheck2 == 0.2.*
                 , test-framework-hunit == 0.2.*
  ghc-options: -O -Wall
